--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -9,8 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag e2t1m0t0r-backend:$(date +%s)
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
@@ -20,4 +18,4 @@ jobs:
       uses: docker/build-push-action@v3.2.0
       with:
         push: true
-        tags: user/app:latest
+        tags: kubakra/e2t1m0t0r-backend:latest
